completata visualizzazione grafica

--- a/frontend/src/app/components/form-scenario/form-scenario.component.css
+++ b/frontend/src/app/components/form-scenario/form-scenario.component.css
@@ -54,6 +54,11 @@ label:hover {
     color: darkred;
 }
 
+#label-left {
+    float: left;
+    margin-left: 1.2rem;
+}
+
 textarea {
     font-size: 8pt;
     width: 93.5%;
