--- a/frontend/src/app/components/form-single-choice/form-single-choice.component.html
+++ b/frontend/src/app/components/form-single-choice/form-single-choice.component.html
@@ -1,31 +1,34 @@
 <app-navbar></app-navbar>
-<div class="single-choice-container" *ngIf="!isInTextEditMode">
-    <h1>Inserisci le informazioni dell'indovinello</h1>
-    <form class="single-choice-form" (ngSubmit)="onSubmit()">
-        <div class="form-group">
-            <label for="testo">Testo dell'Indovinello:</label>
-            <textarea id="testo" name="testo" required [(ngModel)]="testo"></textarea>
-        </div>
-        <div class="form-group">
-            <label for="risposta">Risposta:</label>
-            <input type="text" id="risposta" name="risposta" required [(ngModel)]="risposta" placeholder="Inserisci la risposta corretta">
-        </div>
-        <div class="form-group">
-            <label for="idScenarioRispostaCorretta">ID Scenario Risposta Corretta:</label>
-            <select id="idScenarioRispostaCorretta" name="idScenarioRispostaCorretta" required [(ngModel)]="idScenarioRispostaCorretta">
-                <option *ngFor="let scenario of storyScenarios" [value]="scenario.id">{{ scenario.testo }} (ID: {{scenario.id }})</option>
-            </select>
-        </div>
-        <div class="form-group">
-            <label for="idScenarioRispostaSbagliata">ID Scenario Risposta Sbagliata:</label>
-            <select id="idScenarioRispostaSbagliata" name="idScenarioRispostaSbagliata" required [(ngModel)]="idScenarioRispostaSbagliata">
-                <option *ngFor="let scenario of storyScenarios" [value]="scenario.id">{{ scenario.testo }} (ID: {{scenario.id }})</option>
-            </select>
-        </div>
-        <button type="submit" class="btn-creazione">Crea Indovinello</button>
-    </form>
+<div class="container" *ngIf="!isInTextEditMode">
+    <div class="div-single-choice">
+        <p id="title">Inserisci i dati dell'<span>indovinello</span></p>
+        <form (ngSubmit)="onSubmit()">
+            <div>
+                <label id="label-left" for="testo">Testo</label>
+                <textarea id="testo" name="testo" [(ngModel)]="testo" required></textarea>
+            </div>
+            <div>
+                <label id="label-left" for="risposta">Risposta</label>
+                <textarea id="risposta" name="risposta" [(ngModel)]="risposta" required></textarea>
+            </div>
+            <div class="div-select">
+                <label for="idScenarioRispostaCorretta">Destinazione corretta</label>
+                <select id="idScenarioRispostaCorretta" name="idScenarioRispostaCorretta" [(ngModel)]="idScenarioRispostaCorretta" required>
+                    <option disabled>Identificativo dello scenario dopo la risposta corretta</option>
+                    <option *ngFor="let scenario of storyScenarios" [value]="scenario.id">{{ scenario.testo }} [Id:{{scenario.id }}]</option>
+                </select>
+            </div>
+            <div class="div-select">
+                <label for="idScenarioRispostaSbagliata">Destinazione sbagliata</label>
+                <select id="idScenarioRispostaSbagliata" name="idScenarioRispostaSbagliata" [(ngModel)]="idScenarioRispostaSbagliata" required>
+                    <option disabled>Identificativo dello scenario dopo la risposta errata</option>
+                    <option *ngFor="let scenario of storyScenarios" [value]="scenario.id">{{ scenario.testo }} [Id:{{scenario.id }}]</option>
+                </select>
+            </div>
+            <button type="submit">Crea</button>
+        </form>
+    </div>
 </div>
-
 
 <!--se mi trovo nella modalità di modifica testo scenario-->
 <div class="single-choice-container" *ngIf="isInTextEditMode">
