--- a/frontend/src/app/components/home-stories/home-stories.component.html
+++ b/frontend/src/app/components/home-stories/home-stories.component.html
@@ -1,12 +1,13 @@
 <app-navbar></app-navbar>
 <div class="container">
     <div class="div-title">
-        <p id="title">Le <span>tue</span> più <span>incredibili</span> storie</p>
+        <p id="title">Le tue <span>incredibili</span> storie</p>
     </div>
     <div class="div-story" *ngFor="let item of stories">
         <div id="div-info">
-            <div><label><span class="span-header">Titolo</span><br><span class="span-text">{{ item.titolo }}</span></label></div>
-            <div><label><span class="span-header">Categoria</span><br><span class="span-text">{{ item.categoria }}</span></label></div>
+            <div id="div-text"><label><span class="span-header">Titolo</span><br><span class="span-text">{{ item.titolo }}</span></label></div>
+            <p></p>
+            <div id="div-text"><label><span class="span-header">Categoria</span><br><span class="span-text">{{ item.categoria }}</span></label></div>
         </div>
         <div class="div-button" *ngIf="!item.statoCompletamento"><button (click)="editStory(item)">Modifica Storia</button></div>
         <div class="div-button" *ngIf="item.statoCompletamento"><button (click)="editStory(item)">Modifica Testo Storia</button></div>
