--- a/frontend/src/app/components/create-story/create-story.component.css
+++ b/frontend/src/app/components/create-story/create-story.component.css
@@ -8,7 +8,8 @@
     justify-content: center;
     width: 100vw;
     gap: 20px; 
-    margin-top: 30px; 
+    margin-top: 2rem;
+    margin-bottom: 2rem; 
 }
 
 .div-title {
@@ -80,6 +81,11 @@ button:hover {
 #div-text {
     padding-left: 0.5rem;
     border-left: 2px solid rgb(204, 204, 204, 0.7);
+}
+
+#div-text:hover {
+    padding-left: 0.5rem;
+    border-left: 3px solid rgb(204, 204, 204, 0.7);
 }
 
 .span-header {
