--- a/frontend/src/app/components/form-story/form-story.component.html
+++ b/frontend/src/app/components/form-story/form-story.component.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
 <div class="container">
     <div id="div-story">
-        <p id="title">Inserisci le informazioni <span>principali</span> della <span>storia</span></p>
+        <p id="title">Inserisci i dati della <span>storia</span></p>
         <form (ngSubmit)="onSubmit()">
             <div id="div-form">
                 <label for="titolo">Titolo</label>
@@ -11,6 +11,5 @@
             </div>
             <button type="submit">Crea</button>
         </form>
-        <p id="support-message">Non <span>demordere</span>... <br>Ci vorrà solo <span>qualche</span> passaggio in più!</p>
     </div>
 </div>
