--- a/frontend/src/app/components/story-objects/story-objects.component.html
+++ b/frontend/src/app/components/story-objects/story-objects.component.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
 <div class="container" *ngIf="!isInTextEditMode">
     <div class="div-title">
-        <p id="title">I tuoi <span>magici</span> oggetti...</p>
+        <p id="title">I tuoi magici <span>oggetti</span></p>
     </div>
     <div class="div-objects" *ngFor="let item of storyObjects">
         <div class="div-info">
