--- a/frontend/src/app/components/home-stories/home-stories.component.html
+++ b/frontend/src/app/components/home-stories/home-stories.component.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
 <div class="container">
     <div class="div-title">
-        <p id="title">Le tue <span>incredibili</span> storie</p>
+        <p id="title">Le tue <span>storie</span></p>
     </div>
     <div class="div-story" *ngFor="let item of stories">
         <div id="div-info">
